Fix sidebar z-index so that it shows above the switcher

--- a/src/components/AppMapSidebar.less
+++ b/src/components/AppMapSidebar.less
@@ -18,7 +18,7 @@
   font-family: Calamity;
   font-size: 15px;
   text-rendering: optimizeLegibility;
-  z-index: 1000;
+  z-index: 1001;
   top: 0;
   bottom: 0;
   border: 0;
